--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ body .header {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(11.98%, #242b33), color-stop(51.04%, rgba(45, 52, 60, 0.38)), color-stop(92.19%, #242b33)), url("/css/img/fon.png");
-  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url("/css/img/fon.png");
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(11.98%, #242b33), color-stop(51.04%, rgba(45, 52, 60, 0.38)), color-stop(92.19%, #242b33)), url("/img/fon.png");
+  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url("/img/fon.png");
   position: absolute;
   height: -webkit-fill-available;
   -webkit-box-flex: 0;
@@ -226,25 +226,25 @@ body .first-screen .two_column {
 }
 
 body .first-screen .two_column .four_foto {
-  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url("/css/img/Rectangle3.png"), #d4c17f;
-  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url("/css/img/Rectangle3.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle3.png"), #d4c17f;
+  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url("/img/Rectangle3.png"), #d4c17f;
 }
 
 body .first-screen .two_column .one_foto {
   position: relative;
   cursor: pointer;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url("/css/img/Rectangle4.png"), #d4c17f;
-  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url("/css/img/Rectangle4.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle4.png"), #d4c17f;
+  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url("/img/Rectangle4.png"), #d4c17f;
 }
 
 body .first-screen .two_column .two_foto {
-  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url("/css/img/Rectangle3.png"), #d4c17f;
-  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url("/css/img/Rectangle3.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle3.png"), #d4c17f;
+  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url("/img/Rectangle3.png"), #d4c17f;
 }
 
 body .first-screen .two_column .three_foto {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url("/css/img/Rectangle4.png"), #d4c17f;
-  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url("/css/img/Rectangle4.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle4.png"), #d4c17f;
+  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url("/img/Rectangle4.png"), #d4c17f;
 }
 
 body .first-screen .two_column .roboto-300 {
@@ -274,7 +274,7 @@ body .first-screen .two_column:hover p {
 }
 
 body .cta {
-  background-image: url("/css/img/7.png");
+  background-image: url("/img/7.png");
   position: relative;
   height: 560px;
 }
