--- a/css/style.css
+++ b/css/style.css
@@ -226,25 +226,25 @@ body .first-screen .two_column {
 }
 
 body .first-screen .two_column .four_foto {
-  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle3.png"), #d4c17f;
-  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url("/img/Rectangle3.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url(img\Rectangle3.png), #d4c17f;
+  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url(img\Rectangle3.png), #d4c17f;
 }
 
 body .first-screen .two_column .one_foto {
   position: relative;
   cursor: pointer;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle4.png"), #d4c17f;
-  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url("/img/Rectangle4.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url(img\Rectangle4.png), #d4c17f;
+  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url(img\Rectangle4.png), #d4c17f;
 }
 
 body .first-screen .two_column .two_foto {
-  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle3.png"), #d4c17f;
-  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url("/img/Rectangle3.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(#242b33), color-stop(0.01%, rgba(36, 43, 51, 0)), to(#242b33)), url(img\Rectangle3.png), #d4c17f;
+  background: linear-gradient(180deg, #242b33 0%, rgba(36, 43, 51, 0) 0.01%, #242b33 100%), url(img\Rectangle3.png), #d4c17f;
 }
 
 body .first-screen .two_column .three_foto {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url("/img/Rectangle4.png"), #d4c17f;
-  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url("/img/Rectangle4.png"), #d4c17f;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(36, 43, 51, 0)), to(#242b33)), url(img\Rectangle4.png), #d4c17f;
+  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%), url(img\Rectangle4.png), #d4c17f;
 }
 
 body .first-screen .two_column .roboto-300 {
@@ -274,7 +274,7 @@ body .first-screen .two_column:hover p {
 }
 
 body .cta {
-  background-image: url("/img/7.png");
+  background-image: url(img\7.png);
   position: relative;
   height: 560px;
 }
@@ -344,8 +344,8 @@ body .maps .video_button .play_button {
 body .maps .video_button .video {
   position: relative;
   height: 650px;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.8)), to(rgba(36, 43, 51, 0.8))), url("/img/Rectangle2.png"), #626262;
-  background: linear-gradient(0deg, rgba(36, 43, 51, 0.8), rgba(36, 43, 51, 0.8)), url("/img/Rectangle2.png"), #626262;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(36, 43, 51, 0.8)), to(rgba(36, 43, 51, 0.8))), url(img\Rectangle2.png), #626262;
+  background: linear-gradient(0deg, rgba(36, 43, 51, 0.8), rgba(36, 43, 51, 0.8)), url(img\Rectangle2.png), #626262;
 }
 
 body .maps .sale_title {
