--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
         rgba(45, 52, 60, 0.38) 51.04%,
         #242b33 92.19%
       ),
-      url("/img/fon.png");
+      url(/img/fon.png);
     position: absolute;
     height: -webkit-fill-available;
     flex: 0 0 auto;
