--- a/style.scss
+++ b/style.scss
@@ -322,7 +322,7 @@ body {
       line-height: 64px;
       margin-left: 13%;
       color: $accent;
-      margin-top: 8%;
+      margin-top: 15%;
     }
     .question {
       @extend .flex-center;
@@ -409,74 +409,51 @@ body {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 400px) {
+@media screen and (min-width: 1024px) {
+  .sale {
+    margin-left: 13%;
+  }
+
   .header {
-    height: 70%;
+    height: 100%;
+  }
+
+  .google_map {
+    margin-top: 20%;
+  }
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  .sale {
+    margin-left: 13%;
+  }
+  .header {
+    height: 88%;
   }
 
   .google_map {
     width: 100%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 689px) and (max-width: 992px) {
+  .header {
+    height: 100%;
   }
 
-  .tit {
-    margin-top: 50% !important;
-  }
-
-  .sale_title {
-    font-size: 20px;
-    line-height: 24px;
-    margin-top: 10%;
-  }
-
-  .mouse {
-    padding-top: 1%;
-    width: 5%;
-    height: 5%;
-  }
-
-  .testimonials {
-    margin-top: 35%;
-  }
-
-  .text_h3 {
-    font-size: 20px;
-    line-height: 48px;
-    margin-top: 8%;
-  }
-
-  .text_p {
-    max-width: 100%;
-  }
-
-  .video {
-    margin-top: 30%;
-    width: -webkit-fill-available;
+  .google_map {
+    width: 100%;
     height: auto;
   }
 
+  .testimonials {
+    margin-top: 40%;
+  }
+
   .text-left {
-    font-size: 20px;
-    line-height: 64px;
-    margin-left: 13%;
-    margin-top: 30%;
-  }
-
-  .adress {
-    font-size: 10px;
-  }
-
-  .telephon_ {
-    font-size: 10px;
-  }
-
-  .play_button {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-  }
-
-  .sale {
-    margin-left: 1%;
+    margin-top: 18%;
   }
 }
 
@@ -504,6 +481,7 @@ body {
 
   .google_map {
     width: 100%;
+    height: auto;
   }
 
   .testimonials {
@@ -544,40 +522,91 @@ body {
   .title {
     margin-top: 45%;
   }
+
+  .sale{
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
-@media screen and (min-width: 689px) and (max-width: 992px) {
+
+@media screen and (min-width: 320px) and (max-width: 400px) {
   .header {
-    height: 100%;
+    height: 70%;
+  }
+
+.sale{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+  .google_map {
+    width: 100%;
+    height: auto;
+  }
+
+  .tit {
+    margin-top: 50% !important;
+  }
+
+  .sale_title {
+    font-size: 15px;
+    line-height: 24px;
+    margin-top: 10%;
+  }
+
+  .mouse {
+    padding-top: 1%;
+    width: 5%;
+    height: 5%;
   }
 
   .testimonials {
-    margin-top: 40%;
+    margin-top: 35%;
+  }
+
+  .text_h3 {
+    font-size: 15px;
+    line-height: 48px;
+    margin-top: 8%;
+  }
+
+  .text_p {
+    max-width: 100%;
+  }
+
+  .video {
+    margin-top: 90%;
+    width: 100%;
+    height: auto;
   }
 
   .text-left {
-    margin-top: 18%;
-  }
-}
-
-@media screen and (min-width: 992px) and (max-width: 1024px) {
-  .sale {
+    font-size: 15px;
+    line-height: 64px;
     margin-left: 13%;
+    margin-top: 30%;
   }
-  .header {
-    height: 88%;
-  }
-}
 
-@media screen and (min-width: 1024px) {
+  .adress {
+    font-size: 10px;
+  }
+
+  .telephon_ {
+    font-size: 10px;
+  }
+
+  .play_button {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+  }
+
   .sale {
-    margin-left: 13%;
-  }
-
-  .header {
-    height: 100%;
+    margin-left: 1%;
   }
 }
+
 
 .preloader {
   position: fixed;
